# E-WorshipPlace

./: .qmake.stash  CMakeLists.txt  Makefile  README.md  Settings.ini  connect.cpp  connect.cpp.autosave  connect.h  datebase  datebase.pro  datebase.pro.user.04eb9ca  db_ib.sql  digitalclock.h  digitalclock_s.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_digitalclock.cpp  moc_dynamicfontsizelabel.cpp  moc_mainwindow.cpp  moc_settings.cpp  resources.qrc  settings.cpp  settings.h  settings.ui  takbeer.pro  ui_mainwindow.h  ui_mainwindow.h.save  ui_settings.h
Php_Script/: action_page.php  index.php
